Version 2.12

2003-03-01 Juerg Michel

	Added support for ldap URI via the -H option

Version 2.11

2003-01-31 Henrik Nordstrom <hno@marasystems.com>

	Packaged as a distribution, with Makefile, README
	and INSTALL

	Corrected the squid.conf examples in the manpage and
	some spelling in the same

	Separated the changelog/history to a separate
	ChangeLog file (this file)

2003-01-27 Henrik Nordstrom <hno@marasystems.com>

	Cleaned up error messages shown when a nonexisting
	user tries to log in

Version 2.10

2003-01-07 Jon Kinred

	Fixed user search mode (-F/-u) when -g is not used

Version 2.9

2003-01-03 Henrik Nordstrom <hno@marasystems.com>

	Fixed missing string termination on ldap_escape_vale,
	and corrected build problem with LDAPv2 libraries

Version 2.8

2002-11-27 Henrik Nordstrom <hno@marasystems.com>

	Replacement for ldap_build_filter. Also changed
	the % codes to %u (user) and %g (group) which
	is a bit more intuitive.

2002-11-21 Gerard Eviston

	Fix ldap_search_s error management. This fixes
	a core dump if there is a LDAP search filter
	syntax error (possibly caused by malformed input).

Version 2.7

2002-10-22: Henrik Nordstrom <hno@marasystems.com>

	strwordtok bugfix

Version 2.6

2002-09-21: Gerard Eviston

	-S option to strip NT domain names from
	login names

Version 2.5

2002-09-09: Henrik Nordstrom <hno@marasystems.com>

	Added support for user DN lookups
	(-u -B -F options)

Version 2.4

2002-09-06: Henrik Nordstrom <hno@marasystems.com>

	Many bugfixes in connection management

	-g option added, and added support
	for multiple groups. Prior versions
	only supported one group and an optional
	group base RDN

Version 2.3

2002-09-04: Henrik Nordstrom <hno@marasystems.com>

	Minor cleanups

Version 2.2

2002-09-04: Henrik Nordstrom <hno@marasystems.com>

	Merged changes from squid_ldap_auth.c
	- TLS support (Michael Cunningham)
	- -p option to specify port
		
	Documented the % codes to use in -f

Version 2.1
